// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MachineTypeSelection /> when machine type list needs to be fetched renders correctly 1`] = `
<MachineTypeSelection
  billingModel="standard"
  cloudProviderID="aws"
  getMachineTypes={[MockFunction]}
  input={
    Object {
      "onChange": [MockFunction],
    }
  }
  isBYOC={false}
  isMachinePool={false}
  isMultiAz={false}
  machineTypes={
    Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "machineTypes": Object {},
      "pending": false,
    }
  }
  machineTypesByID={Object {}}
  meta={Object {}}
  organization={
    Object {
      "fulfilled": true,
      "pending": false,
    }
  }
  product="OSD"
  quota={Object {}}
  sortedMachineTypes={
    Array [
      Object {
        "category": "memory_optimized",
        "cloud_provider": Object {
          "href": "/api/clusters_mgmt/v1/cloud_providers/aws",
          "id": "aws",
          "kind": "CloudProviderLink",
        },
        "cpu": Object {
          "unit": "vCPU",
          "value": 4,
        },
        "href": "/api/clusters_mgmt/v1/machine_types/r5.xlarge",
        "id": "r5.xlarge",
        "kind": "MachineType",
        "memory": Object {
          "unit": "B",
          "value": 34359738368,
        },
        "name": "Memory optimized - R5.XLarge",
        "resource_name": "mem.small",
      },
      Object {
        "category": "memory_optimized",
        "cloud_provider": Object {
          "href": "/api/clusters_mgmt/v1/cloud_providers/aws",
          "id": "aws",
          "kind": "CloudProviderLink",
        },
        "cpu": Object {
          "unit": "vCPU",
          "value": 16,
        },
        "href": "/api/clusters_mgmt/v1/machine_types/r5.4xlarge",
        "id": "r5.4xlarge",
        "kind": "MachineType",
        "memory": Object {
          "unit": "B",
          "value": 137438953472,
        },
        "name": "Memory optimized - R5.4XLarge",
        "resource_name": "mem.large",
      },
    ]
  }
>
  <div
    className="spinner-fit-container"
  >
    <Spinner>
      <div
        className="ins-c-spinner"
        role="status"
      >
        <span
          className="pf-u-screen-reader"
        >
          Loading...
        </span>
      </div>
    </Spinner>
  </div>
  <div
    className="spinner-loading-text"
  >
    Loading node types...
  </div>
</MachineTypeSelection>
`;

exports[`<MachineTypeSelection /> when the machine types list is available byoc lacking enough byoc node quota renders correctly 1`] = `
<MachineTypeSelection
  billingModel="standard"
  cloudProviderID="aws"
  getMachineTypes={[MockFunction]}
  input={
    Object {
      "onChange": [MockFunction],
    }
  }
  isBYOC={true}
  isMachinePool={false}
  isMultiAz={true}
  machineTypes={
    Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "machineTypes": Object {},
      "pending": false,
    }
  }
  machineTypesByID={
    Object {
      "r5.4xlarge": Object {
        "category": "memory_optimized",
        "cloud_provider": Object {
          "href": "/api/clusters_mgmt/v1/cloud_providers/aws",
          "id": "aws",
          "kind": "CloudProviderLink",
        },
        "cpu": Object {
          "unit": "vCPU",
          "value": 16,
        },
        "href": "/api/clusters_mgmt/v1/machine_types/r5.4xlarge",
        "id": "r5.4xlarge",
        "kind": "MachineType",
        "memory": Object {
          "unit": "B",
          "value": 137438953472,
        },
        "name": "Memory optimized - R5.4XLarge",
        "resource_name": "mem.large",
      },
      "r5.xlarge": Object {
        "category": "memory_optimized",
        "cloud_provider": Object {
          "href": "/api/clusters_mgmt/v1/cloud_providers/aws",
          "id": "aws",
          "kind": "CloudProviderLink",
        },
        "cpu": Object {
          "unit": "vCPU",
          "value": 4,
        },
        "href": "/api/clusters_mgmt/v1/machine_types/r5.xlarge",
        "id": "r5.xlarge",
        "kind": "MachineType",
        "memory": Object {
          "unit": "B",
          "value": 34359738368,
        },
        "name": "Memory optimized - R5.XLarge",
        "resource_name": "mem.small",
      },
    }
  }
  meta={Object {}}
  organization={
    Object {
      "fulfilled": true,
      "pending": false,
    }
  }
  product="OSD"
  quota={
    Object {
      "clustersQuota": Object {
        "standard": Object {
          "OSD": Object {
            "aws": Object {
              "byoc": Object {
                "multiAz": Object {
                  "available": 5,
                  "mem.small": 5,
                },
                "singleAz": Object {
                  "available": 0,
                },
                "totalAvailable": 5,
              },
              "rhInfra": Object {
                "multiAz": Object {
                  "available": 0,
                },
                "singleAz": Object {
                  "available": 0,
                },
                "totalAvailable": 0,
              },
            },
          },
        },
      },
      "nodesQuota": Object {
        "standard": Object {
          "OSD": Object {
            "aws": Object {
              "byoc": Object {
                "mem.small": Object {
                  "available": 4,
                  "cost": 4,
                },
              },
            },
          },
        },
      },
    }
  }
  sortedMachineTypes={
    Array [
      Object {
        "category": "memory_optimized",
        "cloud_provider": Object {
          "href": "/api/clusters_mgmt/v1/cloud_providers/aws",
          "id": "aws",
          "kind": "CloudProviderLink",
        },
        "cpu": Object {
          "unit": "vCPU",
          "value": 4,
        },
        "href": "/api/clusters_mgmt/v1/machine_types/r5.xlarge",
        "id": "r5.xlarge",
        "kind": "MachineType",
        "memory": Object {
          "unit": "B",
          "value": 34359738368,
        },
        "name": "Memory optimized - R5.XLarge",
        "resource_name": "mem.small",
      },
      Object {
        "category": "memory_optimized",
        "cloud_provider": Object {
          "href": "/api/clusters_mgmt/v1/cloud_providers/aws",
          "id": "aws",
          "kind": "CloudProviderLink",
        },
        "cpu": Object {
          "unit": "vCPU",
          "value": 16,
        },
        "href": "/api/clusters_mgmt/v1/machine_types/r5.4xlarge",
        "id": "r5.4xlarge",
        "kind": "MachineType",
        "memory": Object {
          "unit": "B",
          "value": 137438953472,
        },
        "name": "Memory optimized - R5.4XLarge",
        "resource_name": "mem.large",
      },
    ]
  }
>
  <div
    className="flat-radio-buttons-flex-container"
  >
    <FlatRadioButton
      billingModel="standard"
      icon={
        <MemoryIcon
          color="currentColor"
          noVerticalAlign={false}
          size="lg"
        />
      }
      id="machineTypeRadio.r5.xlarge"
      isDisabled={true}
      isSelected={false}
      key="r5.xlarge"
      onChange={[Function]}
      product="OSD"
      secondaryText={
        <React.Fragment>
          <div>
            Memory optimized
          </div>
          <div>
            R5.xlarge
          </div>
        </React.Fragment>
      }
      titleText="4 vCPU 32 GiB RAM"
      tooltip={false}
      value="r5.xlarge"
    >
      <Button
        billingModel="standard"
        className="ocm-flat-radio-button"
        id="machineTypeRadio.r5.xlarge"
        isDisabled={true}
        onClick={[Function]}
        product="OSD"
        variant="tertiary"
      >
        <button
          aria-disabled={true}
          aria-label={null}
          billingModel="standard"
          className="pf-c-button pf-m-tertiary pf-m-disabled ocm-flat-radio-button"
          data-ouia-component-id="OUIA-Generated-Button-tertiary-5"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={true}
          id="machineTypeRadio.r5.xlarge"
          onClick={[Function]}
          product="OSD"
          role={null}
          tabIndex={null}
          type="button"
        >
          <Split
            hasGutter={true}
          >
            <div
              className="pf-l-split pf-m-gutter"
            >
              <SplitItem
                className="ocm-flat-button-icon"
              >
                <div
                  className="pf-l-split__item ocm-flat-button-icon"
                >
                  <MemoryIcon
                    color="currentColor"
                    noVerticalAlign={false}
                    size="lg"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="2em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.25em",
                        }
                      }
                      viewBox="0 0 640 512"
                      width="2em"
                    >
                      <path
                        d="M640 130.94V96c0-17.67-14.33-32-32-32H32C14.33 64 0 78.33 0 96v34.94c18.6 6.61 32 24.19 32 45.06s-13.4 38.45-32 45.06V320h640v-98.94c-18.6-6.61-32-24.19-32-45.06s13.4-38.45 32-45.06zM224 256h-64V128h64v128zm128 0h-64V128h64v128zm128 0h-64V128h64v128zM0 448h64v-26.67c0-8.84 7.16-16 16-16s16 7.16 16 16V448h128v-26.67c0-8.84 7.16-16 16-16s16 7.16 16 16V448h128v-26.67c0-8.84 7.16-16 16-16s16 7.16 16 16V448h128v-26.67c0-8.84 7.16-16 16-16s16 7.16 16 16V448h64v-96H0v96z"
                      />
                    </svg>
                  </MemoryIcon>
                </div>
              </SplitItem>
              <SplitItem
                isFilled={true}
              >
                <div
                  className="pf-l-split__item pf-m-fill"
                >
                  <Title
                    headingLevel="h4"
                    size="lg"
                  >
                    <h4
                      className="pf-c-title pf-m-lg"
                    >
                      4 vCPU 32 GiB RAM
                    </h4>
                  </Title>
                  <div>
                    Memory optimized
                  </div>
                  <div>
                    R5.xlarge
                  </div>
                </div>
              </SplitItem>
            </div>
          </Split>
        </button>
      </Button>
    </FlatRadioButton>
    <FlatRadioButton
      billingModel="standard"
      icon={
        <MemoryIcon
          color="currentColor"
          noVerticalAlign={false}
          size="lg"
        />
      }
      id="machineTypeRadio.r5.4xlarge"
      isDisabled={true}
      isSelected={false}
      key="r5.4xlarge"
      onChange={[Function]}
      product="OSD"
      secondaryText={
        <React.Fragment>
          <div>
            Memory optimized
          </div>
          <div>
            R5.4xlarge
          </div>
        </React.Fragment>
      }
      titleText="16 vCPU 128 GiB RAM"
      tooltip={false}
      value="r5.4xlarge"
    >
      <Button
        billingModel="standard"
        className="ocm-flat-radio-button"
        id="machineTypeRadio.r5.4xlarge"
        isDisabled={true}
        onClick={[Function]}
        product="OSD"
        variant="tertiary"
      >
        <button
          aria-disabled={true}
          aria-label={null}
          billingModel="standard"
          className="pf-c-button pf-m-tertiary pf-m-disabled ocm-flat-radio-button"
          data-ouia-component-id="OUIA-Generated-Button-tertiary-6"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={true}
          id="machineTypeRadio.r5.4xlarge"
          onClick={[Function]}
          product="OSD"
          role={null}
          tabIndex={null}
          type="button"
        >
          <Split
            hasGutter={true}
          >
            <div
              className="pf-l-split pf-m-gutter"
            >
              <SplitItem
                className="ocm-flat-button-icon"
              >
                <div
                  className="pf-l-split__item ocm-flat-button-icon"
                >
                  <MemoryIcon
                    color="currentColor"
                    noVerticalAlign={false}
                    size="lg"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="2em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.25em",
                        }
                      }
                      viewBox="0 0 640 512"
                      width="2em"
                    >
                      <path
                        d="M640 130.94V96c0-17.67-14.33-32-32-32H32C14.33 64 0 78.33 0 96v34.94c18.6 6.61 32 24.19 32 45.06s-13.4 38.45-32 45.06V320h640v-98.94c-18.6-6.61-32-24.19-32-45.06s13.4-38.45 32-45.06zM224 256h-64V128h64v128zm128 0h-64V128h64v128zm128 0h-64V128h64v128zM0 448h64v-26.67c0-8.84 7.16-16 16-16s16 7.16 16 16V448h128v-26.67c0-8.84 7.16-16 16-16s16 7.16 16 16V448h128v-26.67c0-8.84 7.16-16 16-16s16 7.16 16 16V448h128v-26.67c0-8.84 7.16-16 16-16s16 7.16 16 16V448h64v-96H0v96z"
                      />
                    </svg>
                  </MemoryIcon>
                </div>
              </SplitItem>
              <SplitItem
                isFilled={true}
              >
                <div
                  className="pf-l-split__item pf-m-fill"
                >
                  <Title
                    headingLevel="h4"
                    size="lg"
                  >
                    <h4
                      className="pf-c-title pf-m-lg"
                    >
                      16 vCPU 128 GiB RAM
                    </h4>
                  </Title>
                  <div>
                    Memory optimized
                  </div>
                  <div>
                    R5.4xlarge
                  </div>
                </div>
              </SplitItem>
            </div>
          </Split>
        </button>
      </Button>
    </FlatRadioButton>
  </div>
</MachineTypeSelection>
`;

exports[`<MachineTypeSelection /> when the machine types list is available byoc with sufficient byoc quota available renders correctly 1`] = `
<MachineTypeSelection
  billingModel="standard"
  cloudProviderID="aws"
  getMachineTypes={[MockFunction]}
  input={
    Object {
      "onChange": [MockFunction] {
        "calls": Array [
          Array [
            "r5.xlarge",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    }
  }
  isBYOC={true}
  isMachinePool={false}
  isMultiAz={true}
  machineTypes={
    Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "machineTypes": Object {},
      "pending": false,
    }
  }
  machineTypesByID={
    Object {
      "r5.4xlarge": Object {
        "category": "memory_optimized",
        "cloud_provider": Object {
          "href": "/api/clusters_mgmt/v1/cloud_providers/aws",
          "id": "aws",
          "kind": "CloudProviderLink",
        },
        "cpu": Object {
          "unit": "vCPU",
          "value": 16,
        },
        "href": "/api/clusters_mgmt/v1/machine_types/r5.4xlarge",
        "id": "r5.4xlarge",
        "kind": "MachineType",
        "memory": Object {
          "unit": "B",
          "value": 137438953472,
        },
        "name": "Memory optimized - R5.4XLarge",
        "resource_name": "mem.large",
      },
      "r5.xlarge": Object {
        "category": "memory_optimized",
        "cloud_provider": Object {
          "href": "/api/clusters_mgmt/v1/cloud_providers/aws",
          "id": "aws",
          "kind": "CloudProviderLink",
        },
        "cpu": Object {
          "unit": "vCPU",
          "value": 4,
        },
        "href": "/api/clusters_mgmt/v1/machine_types/r5.xlarge",
        "id": "r5.xlarge",
        "kind": "MachineType",
        "memory": Object {
          "unit": "B",
          "value": 34359738368,
        },
        "name": "Memory optimized - R5.XLarge",
        "resource_name": "mem.small",
      },
    }
  }
  meta={Object {}}
  organization={
    Object {
      "fulfilled": true,
      "pending": false,
    }
  }
  product="OSD"
  quota={
    Object {
      "clustersQuota": Object {
        "standard": Object {
          "OSD": Object {
            "aws": Object {
              "byoc": Object {
                "multiAz": Object {
                  "available": 5,
                  "mem.small": 5,
                },
                "singleAz": Object {
                  "available": 0,
                },
                "totalAvailable": 5,
              },
              "rhInfra": Object {
                "multiAz": Object {
                  "available": 0,
                },
                "singleAz": Object {
                  "available": 0,
                },
                "totalAvailable": 0,
              },
            },
          },
        },
      },
      "nodesQuota": Object {
        "standard": Object {
          "OSD": Object {
            "aws": Object {
              "byoc": Object {
                "mem.small": Object {
                  "available": 12,
                  "cost": 4,
                },
              },
            },
          },
        },
      },
    }
  }
  sortedMachineTypes={
    Array [
      Object {
        "category": "memory_optimized",
        "cloud_provider": Object {
          "href": "/api/clusters_mgmt/v1/cloud_providers/aws",
          "id": "aws",
          "kind": "CloudProviderLink",
        },
        "cpu": Object {
          "unit": "vCPU",
          "value": 4,
        },
        "href": "/api/clusters_mgmt/v1/machine_types/r5.xlarge",
        "id": "r5.xlarge",
        "kind": "MachineType",
        "memory": Object {
          "unit": "B",
          "value": 34359738368,
        },
        "name": "Memory optimized - R5.XLarge",
        "resource_name": "mem.small",
      },
      Object {
        "category": "memory_optimized",
        "cloud_provider": Object {
          "href": "/api/clusters_mgmt/v1/cloud_providers/aws",
          "id": "aws",
          "kind": "CloudProviderLink",
        },
        "cpu": Object {
          "unit": "vCPU",
          "value": 16,
        },
        "href": "/api/clusters_mgmt/v1/machine_types/r5.4xlarge",
        "id": "r5.4xlarge",
        "kind": "MachineType",
        "memory": Object {
          "unit": "B",
          "value": 137438953472,
        },
        "name": "Memory optimized - R5.4XLarge",
        "resource_name": "mem.large",
      },
    ]
  }
>
  <div
    className="flat-radio-buttons-flex-container"
  >
    <FlatRadioButton
      billingModel="standard"
      icon={
        <MemoryIcon
          color="currentColor"
          noVerticalAlign={false}
          size="lg"
        />
      }
      id="machineTypeRadio.r5.xlarge"
      isDisabled={false}
      isSelected={false}
      key="r5.xlarge"
      onChange={[Function]}
      product="OSD"
      secondaryText={
        <React.Fragment>
          <div>
            Memory optimized
          </div>
          <div>
            R5.xlarge
          </div>
        </React.Fragment>
      }
      titleText="4 vCPU 32 GiB RAM"
      tooltip={false}
      value="r5.xlarge"
    >
      <Button
        billingModel="standard"
        className="ocm-flat-radio-button"
        id="machineTypeRadio.r5.xlarge"
        isDisabled={false}
        onClick={[Function]}
        product="OSD"
        variant="tertiary"
      >
        <button
          aria-disabled={false}
          aria-label={null}
          billingModel="standard"
          className="pf-c-button pf-m-tertiary ocm-flat-radio-button"
          data-ouia-component-id="OUIA-Generated-Button-tertiary-3"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={false}
          id="machineTypeRadio.r5.xlarge"
          onClick={[Function]}
          product="OSD"
          role={null}
          type="button"
        >
          <Split
            hasGutter={true}
          >
            <div
              className="pf-l-split pf-m-gutter"
            >
              <SplitItem
                className="ocm-flat-button-icon"
              >
                <div
                  className="pf-l-split__item ocm-flat-button-icon"
                >
                  <MemoryIcon
                    color="currentColor"
                    noVerticalAlign={false}
                    size="lg"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="2em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.25em",
                        }
                      }
                      viewBox="0 0 640 512"
                      width="2em"
                    >
                      <path
                        d="M640 130.94V96c0-17.67-14.33-32-32-32H32C14.33 64 0 78.33 0 96v34.94c18.6 6.61 32 24.19 32 45.06s-13.4 38.45-32 45.06V320h640v-98.94c-18.6-6.61-32-24.19-32-45.06s13.4-38.45 32-45.06zM224 256h-64V128h64v128zm128 0h-64V128h64v128zm128 0h-64V128h64v128zM0 448h64v-26.67c0-8.84 7.16-16 16-16s16 7.16 16 16V448h128v-26.67c0-8.84 7.16-16 16-16s16 7.16 16 16V448h128v-26.67c0-8.84 7.16-16 16-16s16 7.16 16 16V448h128v-26.67c0-8.84 7.16-16 16-16s16 7.16 16 16V448h64v-96H0v96z"
                      />
                    </svg>
                  </MemoryIcon>
                </div>
              </SplitItem>
              <SplitItem
                isFilled={true}
              >
                <div
                  className="pf-l-split__item pf-m-fill"
                >
                  <Title
                    headingLevel="h4"
                    size="lg"
                  >
                    <h4
                      className="pf-c-title pf-m-lg"
                    >
                      4 vCPU 32 GiB RAM
                    </h4>
                  </Title>
                  <div>
                    Memory optimized
                  </div>
                  <div>
                    R5.xlarge
                  </div>
                </div>
              </SplitItem>
            </div>
          </Split>
        </button>
      </Button>
    </FlatRadioButton>
    <FlatRadioButton
      billingModel="standard"
      icon={
        <MemoryIcon
          color="currentColor"
          noVerticalAlign={false}
          size="lg"
        />
      }
      id="machineTypeRadio.r5.4xlarge"
      isDisabled={true}
      isSelected={false}
      key="r5.4xlarge"
      onChange={[Function]}
      product="OSD"
      secondaryText={
        <React.Fragment>
          <div>
            Memory optimized
          </div>
          <div>
            R5.4xlarge
          </div>
        </React.Fragment>
      }
      titleText="16 vCPU 128 GiB RAM"
      tooltip={false}
      value="r5.4xlarge"
    >
      <Button
        billingModel="standard"
        className="ocm-flat-radio-button"
        id="machineTypeRadio.r5.4xlarge"
        isDisabled={true}
        onClick={[Function]}
        product="OSD"
        variant="tertiary"
      >
        <button
          aria-disabled={true}
          aria-label={null}
          billingModel="standard"
          className="pf-c-button pf-m-tertiary pf-m-disabled ocm-flat-radio-button"
          data-ouia-component-id="OUIA-Generated-Button-tertiary-4"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={true}
          id="machineTypeRadio.r5.4xlarge"
          onClick={[Function]}
          product="OSD"
          role={null}
          tabIndex={null}
          type="button"
        >
          <Split
            hasGutter={true}
          >
            <div
              className="pf-l-split pf-m-gutter"
            >
              <SplitItem
                className="ocm-flat-button-icon"
              >
                <div
                  className="pf-l-split__item ocm-flat-button-icon"
                >
                  <MemoryIcon
                    color="currentColor"
                    noVerticalAlign={false}
                    size="lg"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="2em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.25em",
                        }
                      }
                      viewBox="0 0 640 512"
                      width="2em"
                    >
                      <path
                        d="M640 130.94V96c0-17.67-14.33-32-32-32H32C14.33 64 0 78.33 0 96v34.94c18.6 6.61 32 24.19 32 45.06s-13.4 38.45-32 45.06V320h640v-98.94c-18.6-6.61-32-24.19-32-45.06s13.4-38.45 32-45.06zM224 256h-64V128h64v128zm128 0h-64V128h64v128zm128 0h-64V128h64v128zM0 448h64v-26.67c0-8.84 7.16-16 16-16s16 7.16 16 16V448h128v-26.67c0-8.84 7.16-16 16-16s16 7.16 16 16V448h128v-26.67c0-8.84 7.16-16 16-16s16 7.16 16 16V448h128v-26.67c0-8.84 7.16-16 16-16s16 7.16 16 16V448h64v-96H0v96z"
                      />
                    </svg>
                  </MemoryIcon>
                </div>
              </SplitItem>
              <SplitItem
                isFilled={true}
              >
                <div
                  className="pf-l-split__item pf-m-fill"
                >
                  <Title
                    headingLevel="h4"
                    size="lg"
                  >
                    <h4
                      className="pf-c-title pf-m-lg"
                    >
                      16 vCPU 128 GiB RAM
                    </h4>
                  </Title>
                  <div>
                    Memory optimized
                  </div>
                  <div>
                    R5.4xlarge
                  </div>
                </div>
              </SplitItem>
            </div>
          </Split>
        </button>
      </Button>
    </FlatRadioButton>
  </div>
</MachineTypeSelection>
`;

exports[`<MachineTypeSelection /> when the machine types list is available with rhinfra quota available renders correctly 1`] = `
<MachineTypeSelection
  billingModel="standard"
  cloudProviderID="aws"
  getMachineTypes={[MockFunction]}
  input={
    Object {
      "onChange": [MockFunction] {
        "calls": Array [
          Array [
            "r5.xlarge",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
    }
  }
  isBYOC={false}
  isMachinePool={false}
  isMultiAz={true}
  machineTypes={
    Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": true,
      "machineTypes": Object {},
      "pending": false,
    }
  }
  machineTypesByID={
    Object {
      "r5.4xlarge": Object {
        "category": "memory_optimized",
        "cloud_provider": Object {
          "href": "/api/clusters_mgmt/v1/cloud_providers/aws",
          "id": "aws",
          "kind": "CloudProviderLink",
        },
        "cpu": Object {
          "unit": "vCPU",
          "value": 16,
        },
        "href": "/api/clusters_mgmt/v1/machine_types/r5.4xlarge",
        "id": "r5.4xlarge",
        "kind": "MachineType",
        "memory": Object {
          "unit": "B",
          "value": 137438953472,
        },
        "name": "Memory optimized - R5.4XLarge",
        "resource_name": "mem.large",
      },
      "r5.xlarge": Object {
        "category": "memory_optimized",
        "cloud_provider": Object {
          "href": "/api/clusters_mgmt/v1/cloud_providers/aws",
          "id": "aws",
          "kind": "CloudProviderLink",
        },
        "cpu": Object {
          "unit": "vCPU",
          "value": 4,
        },
        "href": "/api/clusters_mgmt/v1/machine_types/r5.xlarge",
        "id": "r5.xlarge",
        "kind": "MachineType",
        "memory": Object {
          "unit": "B",
          "value": 34359738368,
        },
        "name": "Memory optimized - R5.XLarge",
        "resource_name": "mem.small",
      },
    }
  }
  meta={Object {}}
  organization={
    Object {
      "fulfilled": true,
      "pending": false,
    }
  }
  product="OSD"
  quota={
    Object {
      "clustersQuota": Object {
        "standard": Object {
          "OSD": Object {
            "aws": Object {
              "rhInfra": Object {
                "multiAz": Object {
                  "mem.small": 5,
                },
                "singleAz": Object {
                  "mem.small": 0,
                },
              },
            },
          },
        },
      },
    }
  }
  sortedMachineTypes={
    Array [
      Object {
        "category": "memory_optimized",
        "cloud_provider": Object {
          "href": "/api/clusters_mgmt/v1/cloud_providers/aws",
          "id": "aws",
          "kind": "CloudProviderLink",
        },
        "cpu": Object {
          "unit": "vCPU",
          "value": 4,
        },
        "href": "/api/clusters_mgmt/v1/machine_types/r5.xlarge",
        "id": "r5.xlarge",
        "kind": "MachineType",
        "memory": Object {
          "unit": "B",
          "value": 34359738368,
        },
        "name": "Memory optimized - R5.XLarge",
        "resource_name": "mem.small",
      },
      Object {
        "category": "memory_optimized",
        "cloud_provider": Object {
          "href": "/api/clusters_mgmt/v1/cloud_providers/aws",
          "id": "aws",
          "kind": "CloudProviderLink",
        },
        "cpu": Object {
          "unit": "vCPU",
          "value": 16,
        },
        "href": "/api/clusters_mgmt/v1/machine_types/r5.4xlarge",
        "id": "r5.4xlarge",
        "kind": "MachineType",
        "memory": Object {
          "unit": "B",
          "value": 137438953472,
        },
        "name": "Memory optimized - R5.4XLarge",
        "resource_name": "mem.large",
      },
    ]
  }
>
  <div
    className="flat-radio-buttons-flex-container"
  >
    <FlatRadioButton
      billingModel="standard"
      icon={
        <MemoryIcon
          color="currentColor"
          noVerticalAlign={false}
          size="lg"
        />
      }
      id="machineTypeRadio.r5.xlarge"
      isDisabled={false}
      isSelected={false}
      key="r5.xlarge"
      onChange={[Function]}
      product="OSD"
      secondaryText={
        <React.Fragment>
          <div>
            Memory optimized
          </div>
          <div>
            R5.xlarge
          </div>
        </React.Fragment>
      }
      titleText="4 vCPU 32 GiB RAM"
      tooltip={false}
      value="r5.xlarge"
    >
      <Button
        billingModel="standard"
        className="ocm-flat-radio-button"
        id="machineTypeRadio.r5.xlarge"
        isDisabled={false}
        onClick={[Function]}
        product="OSD"
        variant="tertiary"
      >
        <button
          aria-disabled={false}
          aria-label={null}
          billingModel="standard"
          className="pf-c-button pf-m-tertiary ocm-flat-radio-button"
          data-ouia-component-id="OUIA-Generated-Button-tertiary-1"
          data-ouia-component-type="PF4/Button"
          data-ouia-safe={true}
          disabled={false}
          id="machineTypeRadio.r5.xlarge"
          onClick={[Function]}
          product="OSD"
          role={null}
          type="button"
        >
          <Split
            hasGutter={true}
          >
            <div
              className="pf-l-split pf-m-gutter"
            >
              <SplitItem
                className="ocm-flat-button-icon"
              >
                <div
                  className="pf-l-split__item ocm-flat-button-icon"
                >
                  <MemoryIcon
                    color="currentColor"
                    noVerticalAlign={false}
                    size="lg"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      fill="currentColor"
                      height="2em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.25em",
                        }
                      }
                      viewBox="0 0 640 512"
                      width="2em"
                    >
                      <path
                        d="M640 130.94V96c0-17.67-14.33-32-32-32H32C14.33 64 0 78.33 0 96v34.94c18.6 6.61 32 24.19 32 45.06s-13.4 38.45-32 45.06V320h640v-98.94c-18.6-6.61-32-24.19-32-45.06s13.4-38.45 32-45.06zM224 256h-64V128h64v128zm128 0h-64V128h64v128zm128 0h-64V128h64v128zM0 448h64v-26.67c0-8.84 7.16-16 16-16s16 7.16 16 16V448h128v-26.67c0-8.84 7.16-16 16-16s16 7.16 16 16V448h128v-26.67c0-8.84 7.16-16 16-16s16 7.16 16 16V448h128v-26.67c0-8.84 7.16-16 16-16s16 7.16 16 16V448h64v-96H0v96z"
                      />
                    </svg>
                  </MemoryIcon>
                </div>
              </SplitItem>
              <SplitItem
                isFilled={true}
              >
                <div
                  className="pf-l-split__item pf-m-fill"
                >
                  <Title
                    headingLevel="h4"
                    size="lg"
                  >
                    <h4
                      className="pf-c-title pf-m-lg"
                    >
                      4 vCPU 32 GiB RAM
                    </h4>
                  </Title>
                  <div>
                    Memory optimized
                  </div>
                  <div>
                    R5.xlarge
                  </div>
                </div>
              </SplitItem>
            </div>
          </Split>
        </button>
      </Button>
    </FlatRadioButton>
    <FlatRadioButton
      billingModel="standard"
      icon={
        <MemoryIcon
          color="currentColor"
          noVerticalAlign={false}
          size="lg"
        />
      }
      id="machineTypeRadio.r5.4xlarge"
      isDisabled={true}
      isSelected={false}
      key="r5.4xlarge"
      onChange={[Function]}
      product="OSD"
      secondaryText={
        <React.Fragment>
          <div>
            Memory optimized
          </div>
          <div>
            R5.4xlarge
          </div>
        </React.Fragment>
      }
      titleText="16 vCPU 128 GiB RAM"
      tooltip="You do not have quota for this node type. Contact sales to purchase additional quota."
      value="r5.4xlarge"
    >
      <Tooltip
        content="You do not have quota for this node type. Contact sales to purchase additional quota."
      >
        <Popper
          appendTo={[Function]}
          distance={15}
          enableFlip={true}
          flipBehavior={
            Array [
              "top",
              "right",
              "bottom",
              "left",
              "top",
              "right",
              "bottom",
            ]
          }
          isVisible={false}
          onBlur={[Function]}
          onDocumentClick={false}
          onDocumentKeyDown={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTriggerEnter={[Function]}
          placement="top"
          popper={
            <div
              className="pf-c-tooltip"
              id="pf-tooltip-1"
              role="tooltip"
              style={
                Object {
                  "maxWidth": null,
                  "opacity": 0,
                  "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
                }
              }
            >
              <TooltipArrow />
              <TooltipContent
                isLeftAligned={false}
              >
                You do not have quota for this node type. Contact sales to purchase additional quota.
              </TooltipContent>
            </div>
          }
          popperMatchesTriggerWidth={false}
          positionModifiers={
            Object {
              "bottom": "pf-m-bottom",
              "left": "pf-m-left",
              "right": "pf-m-right",
              "top": "pf-m-top",
            }
          }
          trigger={
            <div
              className="ocm-flat-radio-button-disabled"
            >
              <Button
                billingModel="standard"
                className="ocm-flat-radio-button"
                id="machineTypeRadio.r5.4xlarge"
                isDisabled={true}
                onClick={[Function]}
                product="OSD"
                variant="tertiary"
              >
                <Split
                  hasGutter={true}
                >
                  <SplitItem
                    className="ocm-flat-button-icon"
                  >
                    <MemoryIcon
                      color="currentColor"
                      noVerticalAlign={false}
                      size="lg"
                    />
                  </SplitItem>
                  <SplitItem
                    isFilled={true}
                  >
                    <Title
                      headingLevel="h4"
                      size="lg"
                    >
                      16 vCPU 128 GiB RAM
                    </Title>
                    <React.Fragment>
                      <div>
                        Memory optimized
                      </div>
                      <div>
                        R5.4xlarge
                      </div>
                    </React.Fragment>
                  </SplitItem>
                </Split>
              </Button>
            </div>
          }
          zIndex={9999}
        >
          <FindRefWrapper
            onFoundRef={[Function]}
          >
            <div
              className="ocm-flat-radio-button-disabled"
            >
              <Button
                billingModel="standard"
                className="ocm-flat-radio-button"
                id="machineTypeRadio.r5.4xlarge"
                isDisabled={true}
                onClick={[Function]}
                product="OSD"
                variant="tertiary"
              >
                <button
                  aria-disabled={true}
                  aria-label={null}
                  billingModel="standard"
                  className="pf-c-button pf-m-tertiary pf-m-disabled ocm-flat-radio-button"
                  data-ouia-component-id="OUIA-Generated-Button-tertiary-2"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe={true}
                  disabled={true}
                  id="machineTypeRadio.r5.4xlarge"
                  onClick={[Function]}
                  product="OSD"
                  role={null}
                  tabIndex={null}
                  type="button"
                >
                  <Split
                    hasGutter={true}
                  >
                    <div
                      className="pf-l-split pf-m-gutter"
                    >
                      <SplitItem
                        className="ocm-flat-button-icon"
                      >
                        <div
                          className="pf-l-split__item ocm-flat-button-icon"
                        >
                          <MemoryIcon
                            color="currentColor"
                            noVerticalAlign={false}
                            size="lg"
                          >
                            <svg
                              aria-hidden={true}
                              aria-labelledby={null}
                              fill="currentColor"
                              height="2em"
                              role="img"
                              style={
                                Object {
                                  "verticalAlign": "-0.25em",
                                }
                              }
                              viewBox="0 0 640 512"
                              width="2em"
                            >
                              <path
                                d="M640 130.94V96c0-17.67-14.33-32-32-32H32C14.33 64 0 78.33 0 96v34.94c18.6 6.61 32 24.19 32 45.06s-13.4 38.45-32 45.06V320h640v-98.94c-18.6-6.61-32-24.19-32-45.06s13.4-38.45 32-45.06zM224 256h-64V128h64v128zm128 0h-64V128h64v128zm128 0h-64V128h64v128zM0 448h64v-26.67c0-8.84 7.16-16 16-16s16 7.16 16 16V448h128v-26.67c0-8.84 7.16-16 16-16s16 7.16 16 16V448h128v-26.67c0-8.84 7.16-16 16-16s16 7.16 16 16V448h128v-26.67c0-8.84 7.16-16 16-16s16 7.16 16 16V448h64v-96H0v96z"
                              />
                            </svg>
                          </MemoryIcon>
                        </div>
                      </SplitItem>
                      <SplitItem
                        isFilled={true}
                      >
                        <div
                          className="pf-l-split__item pf-m-fill"
                        >
                          <Title
                            headingLevel="h4"
                            size="lg"
                          >
                            <h4
                              className="pf-c-title pf-m-lg"
                            >
                              16 vCPU 128 GiB RAM
                            </h4>
                          </Title>
                          <div>
                            Memory optimized
                          </div>
                          <div>
                            R5.4xlarge
                          </div>
                        </div>
                      </SplitItem>
                    </div>
                  </Split>
                </button>
              </Button>
            </div>
          </FindRefWrapper>
        </Popper>
      </Tooltip>
    </FlatRadioButton>
  </div>
</MachineTypeSelection>
`;

exports[`<MachineTypeSelection /> when the request is pending renders correctly 1`] = `
<MachineTypeSelection
  billingModel="standard"
  cloudProviderID="aws"
  getMachineTypes={[MockFunction]}
  input={
    Object {
      "onChange": [MockFunction],
    }
  }
  isBYOC={false}
  isMachinePool={false}
  isMultiAz={false}
  machineTypes={
    Object {
      "error": false,
      "errorMessage": "",
      "fulfilled": false,
      "pending": true,
      "types": Array [],
    }
  }
  machineTypesByID={Object {}}
  meta={Object {}}
  organization={
    Object {
      "fulfilled": true,
      "pending": false,
    }
  }
  product="OSD"
  quota={Object {}}
  sortedMachineTypes={
    Array [
      Object {
        "category": "memory_optimized",
        "cloud_provider": Object {
          "href": "/api/clusters_mgmt/v1/cloud_providers/aws",
          "id": "aws",
          "kind": "CloudProviderLink",
        },
        "cpu": Object {
          "unit": "vCPU",
          "value": 4,
        },
        "href": "/api/clusters_mgmt/v1/machine_types/r5.xlarge",
        "id": "r5.xlarge",
        "kind": "MachineType",
        "memory": Object {
          "unit": "B",
          "value": 34359738368,
        },
        "name": "Memory optimized - R5.XLarge",
        "resource_name": "mem.small",
      },
      Object {
        "category": "memory_optimized",
        "cloud_provider": Object {
          "href": "/api/clusters_mgmt/v1/cloud_providers/aws",
          "id": "aws",
          "kind": "CloudProviderLink",
        },
        "cpu": Object {
          "unit": "vCPU",
          "value": 16,
        },
        "href": "/api/clusters_mgmt/v1/machine_types/r5.4xlarge",
        "id": "r5.4xlarge",
        "kind": "MachineType",
        "memory": Object {
          "unit": "B",
          "value": 137438953472,
        },
        "name": "Memory optimized - R5.4XLarge",
        "resource_name": "mem.large",
      },
    ]
  }
>
  <div
    className="spinner-fit-container"
  >
    <Spinner>
      <div
        className="ins-c-spinner"
        role="status"
      >
        <span
          className="pf-u-screen-reader"
        >
          Loading...
        </span>
      </div>
    </Spinner>
  </div>
  <div
    className="spinner-loading-text"
  >
    Loading node types...
  </div>
</MachineTypeSelection>
`;

exports[`<MachineTypeSelection /> when there was an error renders correctly 1`] = `
<MachineTypeSelection
  billingModel="standard"
  cloudProviderID="aws"
  getMachineTypes={[MockFunction]}
  input={
    Object {
      "onChange": [MockFunction],
    }
  }
  isBYOC={false}
  isMachinePool={false}
  isMultiAz={false}
  machineTypes={
    Object {
      "error": true,
      "errorMessage": "This is an error message",
      "fulfilled": false,
      "machineTypes": Object {},
      "pending": false,
    }
  }
  machineTypesByID={Object {}}
  meta={Object {}}
  organization={
    Object {
      "fulfilled": true,
      "pending": false,
    }
  }
  product="OSD"
  quota={Object {}}
  sortedMachineTypes={
    Array [
      Object {
        "category": "memory_optimized",
        "cloud_provider": Object {
          "href": "/api/clusters_mgmt/v1/cloud_providers/aws",
          "id": "aws",
          "kind": "CloudProviderLink",
        },
        "cpu": Object {
          "unit": "vCPU",
          "value": 4,
        },
        "href": "/api/clusters_mgmt/v1/machine_types/r5.xlarge",
        "id": "r5.xlarge",
        "kind": "MachineType",
        "memory": Object {
          "unit": "B",
          "value": 34359738368,
        },
        "name": "Memory optimized - R5.XLarge",
        "resource_name": "mem.small",
      },
      Object {
        "category": "memory_optimized",
        "cloud_provider": Object {
          "href": "/api/clusters_mgmt/v1/cloud_providers/aws",
          "id": "aws",
          "kind": "CloudProviderLink",
        },
        "cpu": Object {
          "unit": "vCPU",
          "value": 16,
        },
        "href": "/api/clusters_mgmt/v1/machine_types/r5.4xlarge",
        "id": "r5.4xlarge",
        "kind": "MachineType",
        "memory": Object {
          "unit": "B",
          "value": 137438953472,
        },
        "name": "Memory optimized - R5.4XLarge",
        "resource_name": "mem.large",
      },
    ]
  }
>
  <ErrorBox
    message="Error loading node types"
    response={
      Object {
        "error": true,
        "errorMessage": "This is an error message",
        "fulfilled": false,
        "machineTypes": Object {},
        "pending": false,
      }
    }
  >
    <Alert
      className="error-box"
      isInline={true}
      title="Error loading node types"
      variant="danger"
    >
      <div
        aria-label="Danger Alert"
        className="pf-c-alert pf-m-inline pf-m-danger error-box"
        data-ouia-component-id="OUIA-Generated-Alert-danger-1"
        data-ouia-component-type="PF4/Alert"
        data-ouia-safe={true}
      >
        <Component
          variant="danger"
        >
          <div
            className="pf-c-alert__icon"
          >
            <ExclamationCircleIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 512 512"
                width="1em"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                />
              </svg>
            </ExclamationCircleIcon>
          </div>
        </Component>
        <h4
          className="pf-c-alert__title"
        >
          <span
            className="pf-u-screen-reader"
          >
            Danger alert:
          </span>
          Error loading node types
        </h4>
        <div
          className="pf-c-alert__description"
        >
          <span>
            This is an error message
          </span>
          <br />
          <span>
            Operation ID: N/A
          </span>
        </div>
      </div>
    </Alert>
  </ErrorBox>
</MachineTypeSelection>
`;
